# Ninth

./: DOCUMENTATION.md  LICENSE  README.md  ninth.py  pyproject.toml  setup.py
config/: settings.py
docs/: README.md
docs/api/: language_spec.md
examples/: basic_examples.py
src/: __init__.py  __main__.py
src/core/: __init__.py  fone.py  vm.py
tests/unit/: test_basic.py
